# pattern_generator

./: README.md  pyproject.toml  requirements.txt  setup.py
demo/: truchet.ipynb
examples/: truchet.ipynb  truchet_pattern.ipynb
notebooks/: tiling.ipynb
src/: truchet_pattern.py
src/core/: connector.py  generators.py  pattern.py  quadtree.py  renderer.py  stroke.py  tile.py
src/core/commons/: data_classes.py
src/truchet_tiling/: triangle_pattern.py  truchet_pattern.py
src/truchet_tiling/commons/: constants.py  data_classes.py
src/truchet_tiling/core/: connector.py  connector_new.py  drawing.py  drawing_model.py  generators.py  pattern.py  quadtree.py  renderer.py  stroke.py  svg_utils.py  tile.py  tile_triangle.py  tiles_repository.py  utils.py
src/truchet_tiling/core/commons/: data_classes.py
src/truchet_tiling/core/fills/: gradient.py  perlin.py
src/truchet_tiling/core/trees/: tritree.py
src/truchet_tiling/fills/: perlin.py
src/truchet_tiling/static/triangles/: triangle_1.json  triangle_2.json  triangle_4.json
tiles_pattern_generator/: truchet_pattern.py
tiles_pattern_generator/core/: color_theme.py  connector.py  draw.py  generators.py  pattern.py  pattern_creator.py  quadtree.py  renderer.py  stroke.py  tile.py  utils.py
tiles_pattern_generator/core/commons/: constants.py  data_classes.py
