[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "truchet_tiling"
version = "0.0.24"
authors = [
  { name="Constantin Litvak", email="clitvak@outlook.com" },
]
description = "A truchet tiles generator"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pillow", "pycairo", "cairosvg", "numpy", "perlin_noise"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/con-lit/pattern_generator"
Issues = "https://github.com/con-lit/pattern_generator/issues"

[tool.hatch.build.targets.wheel]
[tool.hatch.build.targets.sdist]
